@@ -2,7 +2,7 @@ package generics;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -13,13 +13,13 @@ public class FruitTest {
         Box<Apple> appleBox = new Box<>();
         appleBox.stackTheFruit(new Apple());
         assertEquals(1.0F, appleBox.getWeight());
-        appleBox.stackFruits(Arrays.asList(new Apple(), new Apple()));
+        appleBox.stackFruits(List.of(new Apple(), new Apple()));
         assertEquals(3.0F, appleBox.getWeight());
 
         Box<Orange> orangeBox = new Box<>();
         orangeBox.stackTheFruit(new Orange());
         assertEquals(1.5F, orangeBox.getWeight());
-        orangeBox.stackFruits(Arrays.asList(new Orange(), new Orange()));
+        orangeBox.stackFruits(List.of(new Orange(), new Orange()));
         assertEquals(4.5F, orangeBox.getWeight());
     }
 
@@ -28,9 +28,9 @@ public class FruitTest {
         Box<Orange> orangeBox1 = new Box<>();
         Box<Orange> orangeBox2 = new Box<>();
         Box<Orange> orangeBox3 = new Box<>();
-        orangeBox1.stackFruits(Arrays.asList(new Orange(), new Orange()));
-        orangeBox2.stackFruits(Arrays.asList(new Orange(), new Orange(), new Orange()));
-        orangeBox3.stackFruits(Arrays.asList(new Orange(), new Orange()));
+        orangeBox1.stackFruits(List.of(new Orange(), new Orange()));
+        orangeBox2.stackFruits(List.of(new Orange(), new Orange(), new Orange()));
+        orangeBox3.stackFruits(List.of(new Orange(), new Orange()));
         assertFalse(orangeBox1.compare(orangeBox2));
         assertTrue(orangeBox1.compare(orangeBox3));
     }
@@ -39,10 +39,15 @@ public class FruitTest {
     public void shouldMergeBoxes() {
         Box<Orange> orangeBox1 = new Box<>();
         Box<Orange> orangeBox2 = new Box<>();
-        orangeBox1.stackFruits(Arrays.asList(new Orange(), new Orange()));
+        orangeBox1.stackFruits(List.of(new Orange(), new Orange()));
         orangeBox2.stackTheFruit(new Orange());
         orangeBox1.merge(orangeBox2);
-        Float result = orangeBox1.getWeight();
-        assertEquals(4.5F, result);
+        List<Orange> mergedOranges = orangeBox1.getAllFruits();
+        assertEquals(3, mergedOranges.size());
+        float totalWeight = 0.0F;
+        for (Orange orange : mergedOranges) {
+            totalWeight += orange.getWeight();
+        }
+        assertEquals(4.5F, totalWeight);
     }
 }
